# raglab-techdocs

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
data/processed/plain_text/: example.txt
data/raw/plain_text/: example.md  example.txt
src/raglab_techdocs/: cli.py
src/raglab_techdocs/chunking_utils/: chunking.py
src/raglab_techdocs/data_preprocessing/: preprocess_utils.py
tests/: test_chunking.py  test_cli.py  test_file_loading.py
