[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "raglab-techdocs"
version = "0.1.0"
description = "A technical-document RAG lab for parsing, chunking, indexing and querying engineering documents."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "typer>=0.12",
    "rich>=13.0",
]

[project.scripts]
raglab = "raglab_techdocs.cli:app"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["raglab_techdocs*"]